src/style/utilities.scss
// breakpoints:

$xl: 1440px;
$lg: 992px;
$md: 768px;
$sm: 480px;

// mixins:

@mixin xl {
  @media (max-width: $xl) {
    @content;
  }
}

@mixin lg {
  @media (max-width: $lg) {
    @content;
  }
}

@mixin md {
  @media (max-width: $md) {
    @content;
  }
}

@mixin sm {
  @media (max-width: $sm) {
    @content;
  }
}

@mixin flex($jc: flex-start, $ai: center, $direction: row) {
  display: flex;
  justify-content: $jc;
  align-items: $ai;
  flex-direction: $direction;
}

@mixin gap($size: 0px, $direction: "row") {
  @if $direction == "row" {
    & > * + * {
      margin-left: $size;
    }
  } @else {
    & > * + * {
      margin-top: $size;
    }
  }
}

/*.container,
.small-container {
  //max-width: 1200px;
  width: 100%;
  margin: 0 auto;

  @include xl {
    //max-width: 992px;
    max-width: calc(100% - 6rem);
  }

  @include lg {
    max-width: calc(100% - 4rem);
  }

  @include sm {
    max-width: calc(100% - 2rem);
  }
}

.container {
  max-width: 1200px;
}

.small-container {
  max-width: 995px;
}*/

@mixin container {
  max-width: 1200px;
  width: 100%;
  margin: 0 auto;

  @include xl {
    max-width: calc(100% - 6rem);
  }

  @include lg {
    max-width: calc(100% - 4rem);
  }

  @include sm {
    max-width: calc(100% - 2rem);
  }
}

@mixin small-container {
  max-width: 995px;
  //width: 100%;
  width: calc(100% -  4rem);
  margin: 0 auto;

  /*@include xl {
    max-width: calc(100% - 6rem);
  }*/

  @include lg {
    max-width: calc(100% - 4rem);
  }

  @include sm {
    max-width: calc(100% - 2rem);
  }
}

@mixin card {
  border-radius: 12px;
  box-shadow: var(--element-shadow);
  padding: var(--size-10);
  @include flex(flex-start, center, column);
  @include gap(var(--size-9), 'column');
  background-color: var(--bg-color-3);
  color: var(--text-color-2);
  font-size: var(--size-6);
  font-family: var(--ff-open-sans);
  cursor: pointer;

  img {
    height: 85px;
  }

  &:hover {
    box-shadow: var(--hover-shadow);
  }

  @include md {
    flex-direction: row;
    @include gap(0, 'column');
    @include gap(var(--size-6));
    padding: 0;
    background-color: transparent;
    box-shadow: none;
    border-radius: 0;
    //padding-bottom: var(--size-2);
    //border-bottom: 1px solid var(--element-color);
    transition: var(--fast);

    &:hover {
      box-shadow: none;
      //border-bottom-color: var(--color-accent);
      color: var(--color-accent);
    }

    img {
      height: auto;
      width: var(--size-10);
    }
  }
}

@mixin popup($dir: 'left', $z: 2) {
  width: 70vw;
  min-width: 250px;
  min-height: 100vh;
  border-radius: 0;
  position: fixed;
  top: 0;
  border-radius: 0;
  border: 0;
  background-color: var(--bg-color-1);
  z-index: $z;

  @if $dir == 'left' {
    left: 0;
  }
  @if $dir == 'right' {
    right: 0;
  }
}

@mixin backdrop($z: 1) {
  position: fixed;
  z-index: $z;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100vw;
  height: 100vh;
  cursor: pointer;

  @include md {
    background-color: rgb(0 0 0 / .3);
  }
}

@mixin button($tc: var(--text-color-1)) {
  display: flex;
  padding: 0;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: pointer;
  font-family: var(--ff-open-sans);
  font-size: var(--size-6);
  color: $tc;
  transition: var(--fast);

  @include md {
    font-size: var(--size-5);
  }
}

@mixin button-hollow {
  display: flex;
  padding: var(--size-2) var(--size-6);
  border-radius: 100vmax;
  box-shadow: inset 0 0 0 1px var(--element-color);
  border: none;
  outline: none;
  background-color: transparent;
  color: var(--text-color-2);
  font-family: var(--ff-open-sans);
  font-size: var(--size-6);
  cursor: pointer;
  transition: var(--fast);

  &:hover,
  &:focus {
    color: var(--color-accent);
    box-shadow: inset 0 0 0 1px var(--color-accent);
  }

  @include md {
    font-size: var(--size-5);
  }
}

@mixin button-fill {
  display: flex;
  padding: var(--size-2) var(--size-6);
  border-radius: 100vmax;
  border: none;
  outline: none;
  background-color: var(--text-color-2);
  color: var(--bg-color-1);
  font-family: var(--ff-open-sans);
  font-size: var(--size-6);
  cursor: pointer;
  transition: var(--fast);

  &:hover,
  &:focus {
    background-color: var(--color-accent);
  }

  @include md {
    font-size: var(--size-5);
  }
}

@mixin button-icon {
  display: flex;
  color: var(--text-color-2);
  background-color: transparent;
  padding: 0;
  margin: 0;
  width: fit-content;
  border: none;
  outline: none;
  transition: var(--fast);
  cursor: pointer;

  &:hover,
  &:focus {
    color: var(--color-accent);
  }
}

@mixin input {
  font-family: var(--ff-open-sans);
  font-size: var(--size-6);
  color: var(--text-color-2);
  padding: var(--size-2) var(--size-6);
  border-radius: 100vmax;
  border: 1px solid var(--element-color);
  outline: none;
  background-color: transparent;
  width: 100%; 
  transition: var(--fast);

  @include md {
    font-size: var(--size-5);
  }

  &:hover, 
  &:focus {
    border: 1px solid var(--text-color-2);
  }
}

@mixin underline {
  content: '';
  display: block;
  width: 100%;
  height: 1px;
  background-color: var(--color-accent);
  position: absolute;
  top: 100%;
  left: 0;
}

@mixin sideline {
  padding-left: var(--size-2);
  position: relative;
  
  &::before {
    content: '';
    display: block;
    width: 1px;
    height: 100%;
    background-color: var(--color-accent);
    position: absolute;
    top: 0;
    left: 0;
  }
}

@mixin modal($z: 2) {
  width: calc(100vw - 2rem);
  max-width: 500px;
  border-radius: 12px;
  background-color: var(--bg-color-1);
  @include gap(var(--size-9), 'column');
  @include flex(flex-start, stretch, column);
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 4;
  padding: var(--size-13);
}

@mixin modal-label {
  font-size: var(--size-6);
  font-family: var(--ff-open-sans);
  color: var(--text-color-2);
  @include flex(flex-start, flex-start, column);

  @include md {
    font-size: var(--size-5);
  }

  span {
    margin-left: var(--size-6);
    margin-bottom: var(--size-2);
  }

  input {
    @include input;
  }
}

